--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "vercel-build": "vite build"
     },
     "devDependencies": {
         "@headlessui/react": "^2.0.0",
@@ -21,5 +22,9 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "html2canvas": "^1.4.1",
+        "jspdf": "^3.0.1"
     }
 }
