--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
     "version": 2,
+    "framework": "vite",
     "builds": [
         {
             "src": "package.json",
@@ -18,5 +19,7 @@
             "src": "/(.*)",
             "dest": "/index.html"
         }
-    ]
+    ],
+    "buildCommand": "npm run build",
+    "outputDirectory": "public/build"
 }
