fix static production portfolio

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "build": "vite build",
         "dev": "vite",
-        "vercel-build": "vite build"
+        "vercel-build": "vite build && node build-static.js"
     },
     "devDependencies": {
         "@headlessui/react": "^2.0.0",
